test/errors/err-termredef.tpg
generator		-- Import Statements
declarations	-- General Declarations
operators		-- Operators (our Node Kinds)
	CONST
rules			-- Production Rules

	-- The following should fail!
	test1 = CONST : 1.
    test2 = CONST : 2.

	-- In order to achieve the upper definition it should be specified as follows:
	-- test = CONST : 1.
	-- test1 = test : 0.
	-- test2 = test : 1.
end




